--- a/popup/info.css
+++ b/popup/info.css
@@ -12,6 +12,10 @@ body {
   display: none;
 }
 
+label {
+  color: white;
+}
+
 button {
   border: none;
   width: 100%;
@@ -61,7 +65,6 @@ p {
   margin-top: 1em;
   margin-bottom: 1em;
   width: 480px;
-
 }
 
 .dropdown {
@@ -69,6 +72,7 @@ p {
 }
 
 .tags {
+  font-size: 12px;
   margin: 3px;
 }
 
