--- a/popup/info.css
+++ b/popup/info.css
@@ -98,3 +98,11 @@ a {
   font-size: 1.2rem; 
   margin-bottom: 10px;
 }
+
+.add-button {
+  display:block;
+}
+
+.update-button {
+  display:none;
+}
